--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,7 @@
   "repository": "https://github.rti.org/RTI/StaticTeamPortal.git/StaticTeamPortal",
   "scripts": {
     "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "build": "vuepress build docs"
   },
   "license": "MIT",
   "devDependencies": {
